--- a/Assignment_2_sol.ipynb
+++ b/Assignment_2_sol.ipynb
@@ -426,6 +426,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13. spam.bacon()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
