--- a/Assignment_3_sol.ipynb
+++ b/Assignment_3_sol.ipynb
@@ -187,6 +187,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The try block lets you test a block of code for errors. The except block lets you handle the error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
