--- a/Programming_Assignment4_sol.ipynb
+++ b/Programming_Assignment4_sol.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -31,6 +38,13 @@
    ],
    "source": [
     "factorial(9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2"
    ]
   },
   {
@@ -71,6 +85,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -102,6 +123,13 @@
    ],
    "source": [
     "fib(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4"
    ]
   },
   {
@@ -140,6 +168,13 @@
    ],
    "source": [
     "Armstrong(1634)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5"
    ]
   },
   {
@@ -189,6 +224,13 @@
    ],
    "source": [
     "allArmstrong(1,1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 6"
    ]
   },
   {
