--- a/Programming_Assignment5_sol.ipynb
+++ b/Programming_Assignment5_sol.ipynb
@@ -1,6 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quesstion 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def primefactor(n):\n",
+    "    pf = []\n",
+    "    while n%2==0:\n",
+    "        n = n/2\n",
+    "        pf.append(2)\n",
+    "    for i in range(3,int(math.sqrt(n))+1,2):\n",
+    "        if n%i==0:\n",
+    "            print(n)\n",
+    "            n = n/i\n",
+    "            pf.append(i)\n",
+    "    return pf      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primefactor(12)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
