--- a/Programming_Assignment7_sol.ipynb
+++ b/Programming_Assignment7_sol.ipynb
@@ -198,12 +198,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Monotonic\n"
+     ]
+    }
+   ],
+   "source": [
+    "monotonic([1,2,7,3,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "mo"
-   ]
+   "source": []
   }
  ],
  "metadata": {
