--- a/Programming_Assignment19_sol.ipynb
+++ b/Programming_Assignment19_sol.ipynb
@@ -9,28 +9,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def double_char(string):\n",
     "    for i in string:\n",
-    "        string = string.replace(i,i+i)\n",
+    "        print(i)\n",
+    "        string = string.replace(i,i*2)\n",
     "    return string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "t\n",
+      "r\n",
+      "i\n",
+      "n\n",
+      "g\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'SSttrriinngg'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,16 +54,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "W\n",
+      "o\n",
+      "r\n",
+      "l\n",
+      "d\n",
+      "!\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'HHeelllllllllllllllloooo  WWoooorrlllllllldd!!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
